🐛 fix: land the 2026-09-07 full-code-audit fix wave
Resolves the P0-P3 findings from code-audit-2026-09-07.md across the
backend, AI subsystem, plugin runtime, store client, frontend, and
desktop shell. Remaining follow-ups are tracked in
AUDIT-FIX-REMAINING-TASKS.md.

Backend & security:
- Self-update scripts no longer leak the auth token: 0700 script perms,
  env-based relaunch, sanitized version strings, UTF-8 batch files
- MySQL plugin-DB grants derive the account host from the datasource
  URL; the setup wizard confines embedded DB paths (escape-hatch
  property); test-connection details gated on auth
- Keychain secrets passed via stdin; four stale "setup is token-bypassed"
  comments corrected; conversation message cap; SSE heartbeats
  interrupted on emitter termination; SETUP context excludes
  PluginHookController

AI subsystem:
- Unattended (scheduled/webhook) runs can no longer hang on approval
  gates: creation is rejected for ask-mode workflows with uncovered
  tools, headless approval timeout (300s), approval notifications
  carrying the runId
- Approval gates are guarded by a gateId: duplicate or late approves
  return 409 instead of releasing the next gate; agent streams require
  run ownership
- Step wall-clock timeout (900s default); step results bounded at 16KB
  in buffers and persistence; one-shot schedule submit failures record
  FAILED; the conversation compactor degrades to hard truncation; CJK
  memory tokenization; 64-step cap on direct workflows
- MCP: exponential-backoff reconnect with immediate dispatch on call
  failure, parallel startup under a total budget, cached tool listings;
  disable-wildcards match whole tool names; hook timeouts kill the
  process tree; NAT64 / IPv4-mapped SSRF guards; skill registry
  snapshot cache; bounded metrics tags

Plugins & store client:
- Worker stdin writes go through a watchdogged queue so a stalled
  worker can no longer wedge host threads
- Marketplace installer: clone paths confined (path-travers